# dxmpp

./: .gitignore  CMakeLists.txt  README.md
DXMPP/: CMakeLists.txt  Connection.cpp  Connection.hpp  ConnectionCallback.hpp  DXMPP.cbp  IEventHandler.hpp  JID.hpp  Roster.cpp  Roster.hpp  Stanza.hpp  StanzaCallback.hpp  TLSVerification.hpp  cmake_install.cmake
DXMPP/Debug/: DebugOutputTreshold.hpp
DXMPP/Network/: AsyncTCPXMLClient.cpp  AsyncTCPXMLClient.hpp  OldAsyncTCPXMLClient.cpp  OldAsyncTCPXMLClient.hpp
DXMPP/SASL/: CryptoPP_byte.hpp  SASL.old.hpp  SASLMechanism.cpp  SASLMechanism.hpp  SASLMechanism_DIGEST_MD5.cpp  SASLMechanism_DIGEST_MD5.hpp  SASLMechanism_EXTERNAL.cpp  SASLMechanism_EXTERNAL.hpp  SASLMechanism_PLAIN.cpp  SASLMechanism_PLAIN.hpp  SASLMechanism_SCRAM_SHA1.cpp  SASLMechanism_SCRAM_SHA1.hpp  SaslChallengeParser.cpp  SaslChallengeParser.hpp
DXMPP/pugixml/: readme.txt
Examples/: CMakeLists.txt  EchoBot.cpp  RosterBot.cpp  TLSBot.cpp
Tests/: CMakeLists.txt  EchoBot.cpp
pugixml/: CMakeLists.txt
